--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@fortawesome/fontawesome-free": "6.1.0",
     "@nguniversal/express-engine": "13.0.2",
     "bootstrap": "5.1.3",
+    "chart.js": "^3.7.1",
     "express": "4.17.3",
+    "ng2-charts": "^3.0.8",
     "prismjs": "1.27.0",
     "rxjs": "7.5.5",
     "tslib": "2.3.1",
@@ -50,6 +52,7 @@
     "@angular/cli": "13.3.0",
     "@angular/compiler-cli": "13.3.0",
     "@nguniversal/builders": "13.0.2",
+    "@types/d3-scale": "^4.0.2",
     "@types/express": "4.17.13",
     "@types/jasmine": "4.0.0",
     "@types/node": "17.0.21",
